syntax = "proto3";

package aql;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

message GraphQuery {
    string graph = 1;
    repeated GraphStatement query = 2;
}

message GraphStatement {
    oneof statement {
        string V = 1;
        string E = 2;
        google.protobuf.ListValue labeled = 3;
        HasStatement has = 4;
        string as = 5;
        google.protobuf.ListValue in = 6;
        google.protobuf.ListValue out = 7;
        google.protobuf.ListValue inEdge = 8;
        google.protobuf.ListValue outEdge = 9;

        SelectStatement select = 12;
        SelectStatement values = 13;
        int64 limit = 14;
        string count = 15;

        string groupCount = 16;

        //Function Methods
        string import = 50;
        string map = 51;
        string fold = 52;
        string filter = 53;
    }
}

message HasStatement {
    string key = 1;
    repeated string within = 2;
}

message SelectStatement {
    repeated string labels = 1;
}

message Vertex {
  string gid = 1;
  string label = 2;
  google.protobuf.Struct properties = 3;
}

message Edge {
  string gid = 1;
  string label = 2;
  string from = 3;
  string to = 4;
  google.protobuf.Struct properties = 5;
}

message Bundle {
  string gid = 1;
  string label = 2;
  string from = 3;
  map<string, google.protobuf.Struct>    bundle = 4;
}


message QueryResult {
    oneof result {
      google.protobuf.Struct struct = 1;
      Vertex vertex = 2;
      Edge edge = 3;
      Bundle bundle = 4;
      int32 int_value = 5;
      double float_value = 6;
      string str_value = 7;
    }
}

message ResultRow {
  QueryResult value = 1;
  repeated QueryResult row = 2;
}

message EditResult {
  oneof result {
    string error = 1;
    string id = 2;
  }
}


message GraphElement {
  string graph = 1;
  Vertex vertex = 2;
  Edge edge = 3;
  Bundle bundle = 4;
}

message ElementID {
  string graph = 1;
  string id = 2;
}

message Empty {

}

service Query {
  rpc Traversal(GraphQuery) returns (stream ResultRow) {
    option (google.api.http) = {
      post: "/v1/graph/{graph}/query"
      body: "*"
    };
  }

  rpc GetVertex(ElementID) returns (Vertex) {
    option (google.api.http) = {
      get: "/v1/graph/{graph}/vertex/{id}"
    };
  }

  rpc GetEdge(ElementID) returns (Edge) {
    option (google.api.http) = {
      get: "/v1/graph/{graph}/edge/{id}"
    };
  }

  rpc GetBundle(ElementID) returns (Bundle) {
    option (google.api.http) = {
      get: "/v1/graph/{graph}/bundle/{id}"
    };
  }

  rpc GetGraphs(Empty) returns (stream ElementID) {
    option (google.api.http) = {
      get: "/v1/graph"
    };
  }

}

service Edit {
  rpc AddVertex(GraphElement) returns (EditResult) {
    option (google.api.http) = {
      post: "/v1/graph/{graph}/vertex"
      body: "vertex"
    };
  }

  rpc AddEdge(GraphElement) returns (EditResult) {
    option (google.api.http) = {
      post: "/v1/graph/{graph}/edge"
      body: "edge"
    };
  }

  rpc AddBundle(GraphElement) returns (EditResult) {
    option (google.api.http) = {
      post: "/v1/graph/{graph}/bundle"
      body: "bundle"
    };
  }

  rpc AddGraph(ElementID) returns (EditResult) {
    option (google.api.http) = {
      post: "/v1/graph/{graph}"
    };
  }

  rpc DeleteGraph(ElementID) returns (EditResult) {
    option (google.api.http) = {
      delete: "/v1/graph/{graph}"
    };
  }

  rpc DeleteVertex(ElementID) returns (EditResult) {
    option (google.api.http) = {
      delete: "/v1/graph/{graph}/vertex/{id}"
    };
  }

  rpc DeleteEdge(ElementID) returns (EditResult) {
    option (google.api.http) = {
      delete: "/v1/graph/{graph}/edge/{id}"
    };
  }

}
